# game

./: .gitignore  Cargo.toml  assets.xcf  game.rs  index.html  index.js  lib.wasm  package-lock.json  package.json  style.css  tsconfig.json  webpack.config.js
rust_src/: dir.rs  material.rs  maze.rs  mod.rs  path.rs  point.rs  utils.rs
rust_src/hpa/: base_chunk.rs  chunk.rs  hpa_map.rs  inter_link.rs  layer.rs  link.rs  mod.rs  super_chunk.rs
src/: cost.ts  game.ts  item.ts  job.ts  machine.ts  main.ts  menu.ts  mouseHandler.ts  scheduler.ts  tile.ts  wasm.ts  worker.ts
src/geometry/: mod.ts  path.ts  pos.ts  rect.ts
src/jobs/: changeTileJob.ts  job.ts  mod.ts  pickupItemJob.ts  removeDebrisJob.ts  removeTileJob.ts
src/managers/: collection.ts  items.ts  jobs.ts  machines.ts  menus.ts  mod.ts  resources.ts  workers.ts
src/world/: item.ts  machine.ts  tile.ts  worker.ts  world.ts
